finished pre processing

--- a/IR_draft1.ipynb
+++ b/IR_draft1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,9 +129,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Please add a \\'Book\\' node.\\n[\"Persons_wishing relegate a \\' Book \\' 4Gbit_s_Fibre_Channel.\"]\\nMake a new node with the label \\'Movie\\'.\\n[\"Reinforce a new node withtheir from Crosstown_Rebels \\' Movie \\'.\"]\\nI would like to add a node labeled \\'Game\\'.\\n[\"\\'ve dared Hmm. to add a node labeled \\' Playoff_Photos \\'.\"]'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# import nlpaug.augmenter.word as naw\n",
     "# aug=naw.WordEmbsAug(model_type='word2vec',model_path=\"/content/supporting models/word2vec/GoogleNews-vectors-negative300.bin\",action='substitute')\n",
@@ -154,9 +165,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Please add a 'Book' node.\\nthen contact other'book'node.\\nMake a new node with the label 'Movie'.\\nhas one new album with the name'movie '.\\nI would like to add a node labeled 'Game'.\\nsome would like too add one section labeled'game '.\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# bertAug=naw.ContextualWordEmbsAug(model_path='bert-base-uncased',action='substitute')\n",
     "# count=0\n",
@@ -182,6 +204,133 @@
    "source": [
     "augmentation is not working i am giving up."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "logging.getLogger(\"transformers\").setLevel(logging.ERROR)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DATA PRE-PROCESSING"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As BERT is trained on a corpus of full sentences of natural language and the embedding process involves contextual embedding, performing stop-word removal might interfere with the accurate functioning of BERT. So we do not remove stop words from our input. This is also why we will not be performing stemming or lemmatization."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "import transformers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "removing all punctuation marks except '' and \"\" as the specifics of graph manipulation are expected to be input in quotes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import string\n",
+    "def removePunctuation(sentence):\n",
+    "    cleaned=\"\".join([char for char in sentence if char not in string.punctuation or char==\"'\" or char=='\"'])    \n",
+    "    return cleaned"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**tokenization using bert tokenizer** <br>\n",
+    "components: <br>\n",
+    "-->tokenization and add special tokens thatr BERT requires and then add padding <br>\n",
+    "--> attention mask:1 for actual token, 0 for pad tokens<br>\n",
+    "-->convert tikens to ids: after you do step 1, you convert each token to unique ID<br>\n",
+    "-->each token is converted into a vector of (seqlen x 768) dimension <br>\n",
+    "--> feed the attention mask and token IDs to the model after converting them to tensors and unsqueezing them at 0th index ??? <br>\n",
+    "--> op= model(tokenIds,attention_mask) <br>\n",
+    "the op is the final embdded vector"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "hugging face's BERT tokenizer uses pre trained BERT base, a small version of BERT. we use cased BERT because we want our model to be case sensitive, which will be important for paramter extraction in the named entity recognition layer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**PRE-PROCESSING FOR BERT** <br>\n",
+    "1. [CLS] and [SEP] are special tokens that BERT requires. this is because BERT was roginally trained for Q-A tasks. For classfn tasks, BERT requirws another special token, which is all in-built in the hugging face tokenizer. \n",
+    "2. All sequences must be of the same length, so we need to do padding. We do the padding on the right side which is preferred for BERT.\n",
+    "3. Finally we pass in attention mask to assign importance to each token. So all non-padding tokens have an attnetion of 1 and oadding tokens have 0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import BertTokenizer\n",
+    "def preProcess(sentence):\n",
+    "    tokenizer=BertTokenizer.from_pretrained('bert-base-cased')\n",
+    "    encoding=tokenizer.encode_plus(\n",
+    "        sentence,\n",
+    "        add_special_tokens= True,\n",
+    "        padding='max_length',\n",
+    "        return_attention_mask=True,\n",
+    "        return_token_type_ids=False,\n",
+    "        return_tensors='pt' #pt signifies pyTorch, use tf for tensorFlow & keras\n",
+    "    )\n",
+    "    return encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ex=\"this is a sentence please encode it\"\n",
+    "processed=preProcess(ex)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MODEL ARCHITECTURE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
