pre processed data. start buulding the model now.

--- a/IR_draft1.ipynb
+++ b/IR_draft1.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
        "4       I need a new node with the label 'Plant'.  add node"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,100 +114,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### DATA AUGMENTATION"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "BELOW CODE WAS RUN ON GOOGLE COLAB AND COPIED TO HERE"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Please add a \\'Book\\' node.\\n[\"Persons_wishing relegate a \\' Book \\' 4Gbit_s_Fibre_Channel.\"]\\nMake a new node with the label \\'Movie\\'.\\n[\"Reinforce a new node withtheir from Crosstown_Rebels \\' Movie \\'.\"]\\nI would like to add a node labeled \\'Game\\'.\\n[\"\\'ve dared Hmm. to add a node labeled \\' Playoff_Photos \\'.\"]'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# import nlpaug.augmenter.word as naw\n",
-    "# aug=naw.WordEmbsAug(model_type='word2vec',model_path=\"/content/supporting models/word2vec/GoogleNews-vectors-negative300.bin\",action='substitute')\n",
-    "# count=0\n",
-    "# for sent in data['sentence']:\n",
-    "#   print(sent)\n",
-    "#   print(aug.augment(sent))\n",
-    "#   count+=1\n",
-    "#   if count==3:\n",
-    "#     break\n",
-    "\n",
-    "# output:\n",
-    "'''Please add a 'Book' node.\n",
-    "[\"Persons_wishing relegate a ' Book ' 4Gbit_s_Fibre_Channel.\"]\n",
-    "Make a new node with the label 'Movie'.\n",
-    "[\"Reinforce a new node withtheir from Crosstown_Rebels ' Movie '.\"]\n",
-    "I would like to add a node labeled 'Game'.\n",
-    "[\"'ve dared Hmm. to add a node labeled ' Playoff_Photos '.\"]'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Please add a 'Book' node.\\nthen contact other'book'node.\\nMake a new node with the label 'Movie'.\\nhas one new album with the name'movie '.\\nI would like to add a node labeled 'Game'.\\nsome would like too add one section labeled'game '.\""
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# bertAug=naw.ContextualWordEmbsAug(model_path='bert-base-uncased',action='substitute')\n",
-    "# count=0\n",
-    "# for sent in data['sentence']:\n",
-    "#   print(sent)\n",
-    "#   print(bertAug.augment(sent)[0])\n",
-    "#   count+=1\n",
-    "#   if count==3:\n",
-    "#     break\n",
-    "  \n",
-    "#output\n",
-    "'''Please add a 'Book' node.\n",
-    "then contact other'book'node.\n",
-    "Make a new node with the label 'Movie'.\n",
-    "has one new album with the name'movie '.\n",
-    "I would like to add a node labeled 'Game'.\n",
-    "some would like too add one section labeled'game '.'''"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "augmentation is not working i am giving up."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,9 +139,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\z004z4ut\\AppData\\Roaming\\Python\\Python312\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import nltk\n",
     "import transformers"
@@ -248,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,6 +173,54 @@
     "def removePunctuation(sentence):\n",
     "    cleaned=\"\".join([char for char in sentence if char not in string.punctuation or char==\"'\" or char=='\"'])    \n",
     "    return cleaned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['sentence'] =data['sentence'].apply(removePunctuation) #remove punctuation from data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "convert all classes to numerical classes <br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class name:add node-->number: 1\n",
+      "Class name:delete node-->number: 2\n",
+      "Class name:add property-->number: 3\n",
+      "Class name:add relationship-->number: 4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\z004z4ut\\AppData\\Local\\Temp\\ipykernel_8984\\2149787421.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  data['intent']=data['intent'].replace(Class,ClassNumber)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ClassNumber=1\n",
+    "for Class in data['intent'].unique():\n",
+    "    print(f'Class name:{Class}-->number: {ClassNumber}')\n",
+    "    data['intent']=data['intent'].replace(Class,ClassNumber)\n",
+    "    ClassNumber+=1"
    ]
   },
   {
@@ -292,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,12 +277,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ex=\"this is a sentence please encode it\"\n",
-    "processed=preProcess(ex)"
+    "data['sentence']=data['sentence'].apply(preProcess)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sentence</th>\n",
+       "      <th>intent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[input_ids, attention_mask]</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      sentence  intent\n",
+       "0  [input_ids, attention_mask]       1"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head(1)"
    ]
   },
   {
@@ -328,8 +346,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
