--- a/IR_draft1.ipynb
+++ b/IR_draft1.ipynb
@@ -653,13 +653,23 @@
     "        optimizer.zero_grad()\n",
     "        predictions=model(ip_ids,mask)\n",
     "        loss=loss_fn(predictions,target)\n",
-    "        # except IndexError:\n",
-    "        #     print(target)\n",
-    "        lossList.append(loss)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "    if epoch%10==0:\n",
-    "        print(f\"{epoch} epoch: loss ={loss}\")"
+    "        print(f\"{epoch} epoch: loss ={loss}\")\n",
+    "        lossList.append(loss.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(lossList)\n",
+    "plt.xlabel(\"Epochs\")\n",
+    "plt.ylabel(\"Loss\")\n",
+    "plt.title(\"Epochs Vs Loss\")"
    ]
   }
  ],
